--- a/src/manifest.json
+++ b/src/manifest.json
@@ -16,7 +16,7 @@
 	"content_scripts": 
 	[
 		{
-			"matches": ["*://*/*"],
+			"matches": ["<all_urls>"],
 			"js": ["content_script.js"],
 			"run_at": "document_end"
 		}
